# A1.5_Smart_Contract_Bytecode_To_Code_Generator

./: .clinerules  .gitignore  DATASET_PIPELINE_FIXES.md  FINDINGS.md  LICENSE  README.md  check_bytecode_format.py  demo.py  demo_dataset.jsonl  download_hf_contracts.py  ds_config.json  latest_results.txt  pyproject.toml  requirements.txt  run_train_deepspeed.sh  run_train_qwen_qlora_500.sh  run_train_qwen_qlora_overfit_sanity_check.sh  run_train_torchrun.sh  test_bytecode.py  test_control_flow.py  test_dataset_pipeline.py  test_fix.py  test_push0.py  test_selectors.py  train.py  train_common.sh
.github/workflows/: ci.yml  data-quality.yml
data/curriculum/: calls48_nonoverlap.jsonl  calls48_nonoverlap.manifest.json  calls_state64_nonoverlap.jsonl  calls_state64_nonoverlap.manifest.json  state_writes48_nonoverlap.jsonl  state_writes48_nonoverlap.manifest.json
data/curriculum_eval/: calls_state64_holdout_nonoverlap.jsonl  calls_state64_holdout_nonoverlap.manifest.json
data/curriculum_negative/: no_calls64_nonoverlap.jsonl  no_calls64_nonoverlap.manifest.json  no_calls_no_state_simple64_nonoverlap.jsonl  no_calls_no_state_simple64_nonoverlap.manifest.json  no_calls_simple64_nonoverlap.jsonl  no_calls_simple64_nonoverlap.manifest.json  no_state_writes64_nonoverlap.jsonl  no_state_writes64_nonoverlap.manifest.json  (+2 more)
docs/: architecture.md  comparisons.md  contributing.md  data-format.md  dataset-generation.md  e2e-harness-design.md  evaluation-diagnostics.md  evaluation.md  gpu-parameter-sweep-results.md  installation.md  limitations-future-work.md  model-details.md  runbook.md  security-applications.md  training-pipeline.md  training-recommendations.md  troubleshooting.md  usage.md
learnings/: learnings.md
reference/: new-research-plan.md
scripts/: analyze_eval_failures.py  build_curriculum_dataset.py  build_lookup_db.py  compare_eval_runs.py  debug_parser.py  decompile.py  demo.py  eval_gate_suite.py  inspect_bytecode.py  run_basic_training_comparison.py  run_compiler_metadata_ablation.py
src/: __init__.py  abi_enrichment.py  audit_report.py  bytecode_analyzer.py  contract_reconstruction.py  dataset_export_primitives.py  dataset_pipeline.py  evaluation_report.py  inference.py  local_compiler.py  malicious_classifier.py  model_setup.py  opcode_features.py  pipeline_orchestrator.py  replication_metrics.py  selector_resolver.py  settings.yaml  settings.yaml.example  tac_lookup.py  training_pipeline.py  vulnerability_detector.py
test_data/: contracts.db
tests/: test_audit_report.py  test_build_curriculum_dataset.py  test_bytecode_analyzer.py  test_compare_eval_runs.py  test_contract_reconstruction.py  test_data_generation_export_issues.py  test_dataset_pipeline.py  test_dataset_quality_issues.py  test_decompile_cli.py  test_docs_consistency.py  test_e2e.py  test_eval_failure_analysis.py  test_eval_gate_suite.py  test_evaluation_quality_metrics.py  test_evaluation_report.py  test_malicious_classifier.py  test_model_training_issues.py  test_opcode_features.py  test_pipeline_orchestrator.py  test_prompt_metadata.py  test_replication_metrics.py  test_train_cli_issues.py  test_vulnerability_detector.py  test_web_app.py
web/: app.py
web/static/: app.js  style.css
(+166 files in other folders)
