[project]
name = "smart-contract-decompiler"
version = "1.0.0"
description = "Smart contract decompilation using Llama 3.2 3B — EVM bytecode to Solidity via TAC"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true