[project]
name = "smart-contract-decompiler"
version = "2.0.0"
description = "Smart contract decompilation and security analysis — EVM bytecode to Solidity via TAC, with vulnerability detection, malicious classification, and audit reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0,<3",
    "transformers>=4.35,<5",
    "datasets>=2.14,<3",
    "accelerate>=1.1,<2",
    "peft>=0.6,<0.19",
    "bitsandbytes>=0.41,<1",
    "trl>=0.7,<1",
    "web3>=6.0,<7",
    "py-evm>=0.10,<1",
    "eth-abi>=4.0,<6",
    "eth-utils>=2.0,<5",
    "evmdasm>=0.1,<1",
    "py-solc-x>=2.0,<3",
    "numpy>=1.24,<2",
    "pandas>=2.0,<3",
    "pyarrow",
    "scipy>=1.10,<2",
    "scikit-learn>=1.3,<2",
    "nltk>=3.8,<4",
    "rouge-score>=0.1,<1",
    "sentence-transformers>=2.2,<4",
    "lightgbm>=4.0,<5",
    "lime>=0.2,<1",
    "shap>=0.42,<1",
    "matplotlib>=3.7,<4",
    "seaborn>=0.12,<1",
    "wandb>=0.15,<1",
    "tensorboard>=2.14,<3",
    "huggingface-hub>=0.17,<1",
    "requests>=2.28,<3",
    "flask>=3.0,<4",
    "flask-cors>=4.0,<5",
    "nvidia-ml-py3>=7.0,<8",
    "tqdm>=4.65,<5",
    "click>=8.0,<9",
    "pyyaml>=6.0,<7",
    "jsonlines>=3.1,<5",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
deepspeed = ["deepspeed>=0.10.0"]
flash-attn = ["flash-attn"]

[dependency-groups]
dev = [
    "pytest>=7.0,<10",
    "black>=23.0,<25",
    "flake8>=6.0,<8",
    "mypy>=1.0,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-p no:pytest_ethereum -v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true